chore: update site seo headers and add social preview images

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,8 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Project IDA | Advanced Data Analytics Platform</title>
+    <meta name="title" content="Project IDA | Advanced Data Analytics Platform" />
+    <meta name="description" content="Unlock the power of your data with Project IDA. Advanced EDA, AI-driven insights, and secure data management for enterprise and pro users." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://projectida.up.railway.app/" />
+    <meta property="og:title" content="Project IDA | Advanced Data Analytics Platform" />
+    <meta property="og:description" content="Unlock the power of your data with Project IDA. Advanced EDA, AI-driven insights, and secure data management for enterprise and pro users." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://projectida.up.railway.app/" />
+    <meta property="twitter:title" content="Project IDA | Advanced Data Analytics Platform" />
+    <meta property="twitter:description" content="Unlock the power of your data with Project IDA. Advanced EDA, AI-driven insights, and secure data management for enterprise and pro users." />
+    <meta property="twitter:image" content="/og-image.png" />
+
+    <meta name="theme-color" content="#4f46e5" />
   </head>
   <body>
     <div id="root"></div>
